--- a/content/articles/34.durable-functions-api-durableorchestrationclient-2.md
+++ b/content/articles/34.durable-functions-api-durableorchestrationclient-2.md
@@ -1,16 +1,20 @@
 ---
-layout: post
+cover: /articles/2019/34.durable-orchestration-clientbase2_900.png
+author:
+  name: Marc Duiker
+  avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
+  link: https://twitter.com/marcduiker
+date: 2019-02-10
 title: "Discovering the Durable Functions API - Retrieving the orchestration status (DurableOrchestrationClient part 2)"
-tags: azure durable functions serverless faas stateful orchestration
+description:
+layout: article
 ---
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2019/02/10/DurableOrchestrationClientBase2_900.png" alt="Methods in DurableOrchestrationClientBase">
+![Durable Orchestration ClientBase](/articles/2019/34.durable-orchestration-clientbase2_900.png)
 
 ## DurableOrchestrationClient(Base) class - Retrieving status
 
 This post is the second part of a series of blogs/vlogs to discover the Durable Functions API.
-
-<!--more-->
 
 In the video linked below, I'm looking into the functionality from the  [`DurableOrchestrationClient`(`Base`)](https://github.com/Azure/azure-functions-durable-extension/blob/master/src/WebJobs.Extensions.DurableTask/DurableOrchestrationClientBase.cs) class, which can be used to retrieve the status of orchestration instances.
 
@@ -35,6 +39,6 @@ Here's the video, please give it a thumbs up if you like it and subscribe to my 
 
 ### Links to other posts in this series
 
-- [Starting Orchestrations (DurableOrchestrationClient Part 1)](/2019/01/07/durable-functions-api-durableorchestrationclient-1.html)
+- [Starting Orchestrations (DurableOrchestrationClient Part 1)](/articles/durable-functions-api-durableorchestrationclient-1)
 - Retrieving the Orchestration Status (DurableOrchestrationClient Part 2)
-- [Purge & Terminate Orchestrations (DurableOrchestrationClient Part 3)](/2019/08/12/durable-functions-api-purge-terminate.html)
+- [Purge & Terminate Orchestrations (DurableOrchestrationClient Part 3)](/articles/durable-functions-api-purge-terminate)
