--- a/content/articles/35.creating-azure-functions-updates-twitterbot.md
+++ b/content/articles/35.creating-azure-functions-updates-twitterbot.md
@@ -1,16 +1,20 @@
 ---
-layout: post
+cover: /articles/2019/35.1.azfuncupdates_twitter.png
+author:
+  name: Marc Duiker
+  avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
+  link: https://twitter.com/marcduiker
+date: 2019-03-03
 title: "Creating the Azure Functions Updates Twitterbot"
-tags: azure durable functions serverless faas stateful orchestration twitter github
+description:
+layout: article
 ---
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2019/03/03/azfuncupdates_twitter.png" alt="Azure Funtions Updates Twitter account screenshot">
+![Azure Functions Updates component diagram](/articles/2019/35.1.azfuncupdates_twitter.png)
 
 ## TL;DR
 
 Go to [https://twitter.com/az_func_updates](https://twitter.com/az_func_updates) and follow that account to stay up to date with new Azure Functions releases!
-
-<!--more-->
 
 ## What I'm trying to solve
 
@@ -32,7 +36,7 @@ Since I'm a big fan of Azure Functions myself, I wanted to use this service as t
 
 The design of the application is as follows:
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2019/03/03/azfunctionupdates_diagram.png" alt="Azure Functions Updates component diagram.">
+![Azure Functions Updates component diagram](/articles/2019/35.2.azfunctionupdates_diagram.png)
 
 ### Storage: Azure Table Storage
 
@@ -45,11 +49,11 @@ Both require very little storage. I decided on using Azure Table Storage since t
 
 The repositories to check are stored in the `RepositoryConfigurations` table:
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2019/03/03/repository_configurations.png" alt="Azure Storage Table with repository configurations.">
+![Azure Storage Table with repository configurations](/articles/2019/35.3.repository_configurations.png)
 
 The release information retrieved from GitHub is stored in the `Releases` table:
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2019/03/03/releases.png" alt="Azure Storage Table with release info from GitHub.">
+![Azure Storage Table with release info from GitHub](/articles/2019/35.4.releases.png)
 
 I'm not storing the entire GitHub Release object, only the properties I need (or plan to use soon).
 
@@ -75,7 +79,14 @@ The orchestrator function uses the fan-out/fan-in pattern since it can call the 
 For the GitHub integration, I'm using [Octokit](https://github.com/octokit/octokit.net), an excellent GitHub API client library for .NET.
 
 The usage is the following:
-{% gist 50fb218fb33afd8e3c2447306a3af7d2 %}
+
+```csharp
+var client = new GitHubClient(new ProductHeaderValue("SomeApplicationIdentifier"));
+
+var latestRelease = await client.Repository.Release.GetLatest(
+    repoConfiguration.RepositoryOwner,
+    repoConfiguration.RepositoryName);
+```
 
 I'm doing unauthenticated requests which means the application is [rate limited at 60 requests per hour](https://developer.github.com/v3/#rate-limiting). I'm far from that number of repositories to check, but it's good to be aware this doesn't scale very well. For authenticated requests, the rate limiting is set much higher, at 5000 requests per hour. 
 
@@ -85,7 +96,20 @@ To have an application post tweets, you need a Twitter developer account and set
 
 To post the updates to Twitter from my function app I'm using [Tweetinvi](https://github.com/linvi/tweetinvi). I found this Twitter client library for .NET Core very easy to use:
 
-{% gist 9c1266cdc2f6998e67dcf911928b67ef %}
+```csharp
+var creds = new TwitterCredentials(
+     consumerApiKey, 
+     consumerApiSecret, 
+     accessToken, 
+     accessTokenSecret);
+
+var tweetMessage = CreateMessage(newRelease);
+
+var tweet = Auth.ExecuteOperationWithCredentials(creds, () =>
+{
+    return Tweet.PublishTweet(tweetMessage);
+});
+```
 
 ## Overall development experience
 
@@ -93,7 +117,7 @@ I built this application in about 6 evenings over the last month. I find it quit
 
 Development was mostly done in Visual Studio 2019 Preview and a bit of VS Code. I've set up a CI/CD pipeline in Azure DevOps so as soon as I merge to master a new release is built and deployed to Azure.
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2019/03/03/azuredevops.png" alt="Azure Devops CD pipeline.">
+![Azure Devops CD pipeline](/articles/2019/35.5.azuredevops.png)
 
 It was certainly an enjoyable experience to make this, and I hope you will benefit from it. 
 
