--- a/content/articles/36.durable-functions-api-purge-terminate.md
+++ b/content/articles/36.durable-functions-api-purge-terminate.md
@@ -1,16 +1,20 @@
 ---
-layout: post
+cover: /articles/2019/36.purge-terminate-cover.png
+author:
+  name: Marc Duiker
+  avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
+  link: https://twitter.com/marcduiker
+date: 2019-08-12
 title: "Discovering the Durable Functions API - Purge & Terminate Orchestrations (DurableOrchestrationClient part 3)"
-tags: azure durable functions serverless faas stateful orchestration
+description:
+layout: article
 ---
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2019/08/12/purge-terminate-cover.png" alt="Methods in DurableOrchestrationClientBase">
+![Methods in DurableOrchestrationClientBase](/articles/2019/36.purge-terminate-cover.png)
 
 ## DurableOrchestrationClient(Base) class - Purge & Terminate
 
 This post is the third part of a series of blogs/vlogs to discover the Durable Functions API.
-
-<!--more-->
 
 In the video linked below, I'm looking into the functionality from the [`DurableOrchestrationClient`(`Base`)](https://github.com/Azure/azure-functions-durable-extension/blob/master/src/WebJobs.Extensions.DurableTask/DurableOrchestrationClientBase.cs) class which is used to:
 
@@ -59,6 +63,6 @@ Here's the video, please give it a thumbs up if you like it and subscribe to my 
 
 ### Links to other posts in this series
 
-- [Starting Orchestrations (DurableOrchestrationClient Part 1)](/2019/01/07/durable-functions-api-durableorchestrationclient-1.html)
-- [Retrieving the Orchestration Status (DurableOrchestrationClient Part 2)](/2019/02/17/durable-functions-api-durableorchestrationclient-2.html)
+- [Starting Orchestrations (DurableOrchestrationClient Part 1)](/articles/durable-functions-api-durableorchestrationclient-1)
+- [Retrieving the Orchestration Status (DurableOrchestrationClient Part 2)](/articles/durable-functions-api-durableorchestrationclient-2)
 - Purge & Terminate Orchestrations (DurableOrchestrationClient Part 3)
