--- a/content/articles/33.durable-functions-api-durableorchestrationclient-1.md
+++ b/content/articles/33.durable-functions-api-durableorchestrationclient-1.md
@@ -1,16 +1,20 @@
 ---
-layout: post
+cover: /articles/2019/33.durable-orchestration-clientbase1_900.png
+author:
+  name: Marc Duiker
+  avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
+  link: https://twitter.com/marcduiker
+date: 2019-01-07
 title: "Discovering the Durable Functions API - Starting orchestrations (DurableOrchestrationClient part 1)"
-tags: azure durable functions serverless faas stateful orchestration
+description:
+layout: article
 ---
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2019/01/07/DurableOrchestrationClientBase1_900.png" alt="Methods in DurableOrchestrationClientBase">
+![Durable Orchestration ClientBase](/articles/2019/33.durable-orchestration-clientbase1_900.png)
 
 ## DurableOrchestrationClient(Base) class - Starting & waiting for completion
 
 This post is the first part of a series of blogs/vlogs to discover the Durable Functions API.
-
-<!--more-->
 
 In the video linked below, I'm looking into methods from the  [`DurableOrchestrationClient`(`Base`)](https://github.com/Azure/azure-functions-durable-extension/blob/master/src/WebJobs.Extensions.DurableTask/DurableOrchestrationClientBase.cs) class on how to start a new orchestration instance and how to retrieve the status and the result of the instance:
 
@@ -34,5 +38,5 @@ Here's the video, please give it a thumbs up if you like it and subscribe to my 
 ### Links to other posts in this series
 
 - Starting orchestrations (DurableOrchestrationClient Part 1)
-- [Retrieving the orchestration status (DurableOrchestrationClient Part 2)](/2019/02/17/durable-functions-api-durableorchestrationclient-2.html)
-- [Purge & Terminate Orchestrations (DurableOrchestrationClient Part 3)](/2019/08/12/durable-functions-api-purge-terminate.html)
+- [Retrieving the orchestration status (DurableOrchestrationClient Part 2)](/articles/durable-functions-api-durableorchestrationclient-2)
+- [Purge & Terminate Orchestrations (DurableOrchestrationClient Part 3)](/articles/durable-functions-api-purge-terminate)
