Add link to pixelart

--- a/content/1.index.md
+++ b/content/1.index.md
@@ -29,6 +29,13 @@ Things I love doing
 
   ::card
   #title
+  Drawing pixel art
+  #description
+  :button-link[See my drawings]{ href="/pixelart"}
+  ::
+
+  ::card
+  #title
   Creative coding
   #description
   :button-link[See my sketches]{ href="/creative-coding"}
