--- a/content/1.index.md
+++ b/content/1.index.md
@@ -22,21 +22,21 @@ Things I love doing
 #default
   ::card
   #title
-  Creating content
+  Improving DevEx 📝 📽️ 💻
   #description
   :button-link[Read my articles]{ href="/articles"}
   ::
 
   ::card
   #title
-  Drawing pixel art
+  Drawing pixel art 🎨 👾
   #description
   :button-link[See my drawings]{ href="/pixelart"}
   ::
 
   ::card
   #title
-  Creative coding
+  Creative coding 🖼️ 🧑‍💻
   #description
   :button-link[See my sketches]{ href="/creative-coding"}
   ::
@@ -51,8 +51,8 @@ Things I love doing
 
 ### //TODO
 
-- [ ] Migrate blog posts
+- [ ] Migrate blog posts (in progress)
 - [ ] Add page on DevEx
-- [ ] Add page on pixel art
+- [X] Add page on pixel art
 - [X] Add page on creative coding
 - [ ] Update this index page
