--- a/content/5.creative-coding.md
+++ b/content/5.creative-coding.md
@@ -3,6 +3,8 @@ title: Creative Coding
 layout: default
 ---
 
+## Happy accidents
+
 I really love creative coding. It feels quite different compared to coding for work. When I code for work, I do it to achieve a very specific goal; to implement a business feature, or to demonstrate how something works in a proof of concept. With creative coding, my goal is to create something fun or beautiful, where the result is often achieved by happy accidents.
 
 If you're interested in learning (visual) creative coding, I can definitely recommend the [Coding Train](https://www.youtube.com/c/TheCodingTrain/videos) channel on YouTube. Daniel Shiffman is an amazing teacher, I want to be like him when I grow up 😅.
