--- a/content/4.pixelart.md
+++ b/content/4.pixelart.md
@@ -3,6 +3,16 @@ title: Pixel Art
 layout: default
 ---
 
+## Games
+
+Some years ago I got interested in [Pico8](https://www.lexaloffle.com/pico-8.php), a fantasy game console for making, sharing, and playing retro games. I made a small game around Azure Functions, which you can play below. I really enjoyed making this game, but it was also a lot of work. I started just doing pixel art with Pico8 and later changed to [Aseprite](https://www.aseprite.org/), which is a great tool dedicated for making pixel art. 
+
+<iframe height="167" frameborder="0" src="https://itch.io/embed/542859" width="552"><a href="https://marcduiker.itch.io/azure-functions-the-game">Azure Functions, The Game by marcduiker</a></iframe>
+
+Every now and then I still enjoy making a small retro game, such as my announcement to join Diagrid as a Sr Developer Advocate, but most of the time I stick with drawing pixel art, either for my own enjoyment, or when people commission me to design a logo, or draw their online avatar.
+
+<iframe src="https://itch.io/embed/1859023" width="552" height="167" frameborder="0"><a href="https://marcduiker.itch.io/joining-diagrid">Joining Diagrid by marcduiker</a></iframe>
+
 ## Commission me
 
 You can commission me to create pixel art via [ko-fi](https://ko-fi.com/marcduiker/commissions). If the existing options there are not to your liking, please contact me via [Twitter](https://twitter.com/marcduiker) or [Mastodon](https://mstdn.social/@marcduiker) to discuss your wishes.
@@ -13,7 +23,7 @@ I do **not** take on NFT-related work. Do not use my existing work for NFTs.
 
 ::card-grid
 #title
-## Some of my works
+## Some animations and stills I made
 
 #default
   ::card
@@ -87,5 +97,4 @@ I do **not** take on NFT-related work. Do not use my existing work for NFTs.
   #description
   Yes, I think I did mention that...
   ::
-
 ::
