Change to speaker bio

--- a/content/6.about.md
+++ b/content/6.about.md
@@ -3,7 +3,7 @@ title: About
 layout: default
 ---
 
-## Bio
+## Speaker Bio
 
 Marc is a Sr Developer Advocate at Diagrid with a strong focus on event-driven architectures in the cloud. He loves helping developers to achieve more every day.
 
