Add two 2020 posts

--- a/content/articles/38.durable-functions-api-durableorchestrationclient-4.md
+++ b/content/articles/38.durable-functions-api-durableorchestrationclient-4.md
@@ -1,7 +1,13 @@
 ---
-layout: post
+cover: /articles/2020/38.cover.png
+author:
+  name: Marc Duiker
+  avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
+  link: https://twitter.com/marcduiker
+date: 2020-03-15
 title: "Discovering the Durable Functions API - Human Interaction (DurableOrchestrationClient part 4)"
-tags: azure durable functions serverless faas stateful orchestration
+description:
+layout: article
 ---
 
 ## Human Interaction Pattern
@@ -18,6 +24,6 @@ The source code that is used for this demo can be found on [GitHub](https://gith
 
 ### Links to other posts in this series
 
-- [Starting Orchestrations (DurableOrchestrationClient Part 1)](/2019/01/07/durable-functions-api-durableorchestrationclient-1.html)
-- [Retrieving the Orchestration Status (DurableOrchestrationClient Part 2)](/2019/02/17/durable-functions-api-durableorchestrationclient-2.html)
-- [Purge & Terminate Orchestrations (DurableOrchestrationClient Part 3)](/2019/08/12/durable-functions-api-purge-terminate.html)
+- [Starting Orchestrations (DurableOrchestrationClient Part 1)](/articles/durable-functions-api-durableorchestrationclient-1)
+- [Retrieving the Orchestration Status (DurableOrchestrationClient Part 2)](/articles/durable-functions-api-durableorchestrationclient-2)
+- [Purge & Terminate Orchestrations (DurableOrchestrationClient Part 3)](/articles/durable-functions-api-purge-terminate)
