--- a/content/articles/39.streaming-for-serverlessdays.md
+++ b/content/articles/39.streaming-for-serverlessdays.md
@@ -1,7 +1,13 @@
 ---
-layout: post
+cover: /articles/2020/39.1.cover.png
+author:
+  name: Marc Duiker
+  avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
+  link: https://twitter.com/marcduiker
+date: 2020-04-08
 title: "Live streaming the meetups and conference for ServerlessDays Amsterdam - Part 1"
-tags: azure live-streaming serverlessdays
+description:
+layout: article
 ---
 
 ## Everyone is live streaming!
@@ -9,8 +15,6 @@ tags: azure live-streaming serverlessdays
 Well, ok, not *everyone*, but a lot of meetups & conferences which were previously only offline and IRL have an online presence these days. It really lowers the boundary of attending these events, and I think this is great!
 
 ServerlessDays Amsterdam (which I'm co-organizing) is also moving online for both the meetups and the conference. In this post, I'm highlighting some details on how we're setting this up.
-
-<!--more-->
 
 ## Streaming setup basics
 
@@ -43,17 +47,17 @@ For Serverless Amsterdam I ended up provisioning a GPU enabled virtual machine (
 
 What I didn't realize initially is that the VM has no preinstalled drivers to actually use the GPU. So make sure to install the NVIDIA GPU drivers. I did that by installing the `NVIDIA GPU Driver Extension` though the Extensions blade in the Azure Portal:
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2020/04/08/nvidia_driver_extensions.png" alt="Azure Portal Extensions">
+![Azure Portal Extensions](/articles/2020/39.2.nvidia_driver_extensions.png)
 
 Now we can use the hardware encoding (NVENC) in OBS:
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2020/04/08/obs_output.png" alt="OBS Output Settings">
+![OBS Output Settings](/articles/2020/39.3.obs_output.png)
 
 ### Redirect local USB devices to the VM
 
 I purchased an [Elgato Stream Deck](https://www.elgato.com/en/gaming/stream-deck) so I can easily switch between scenes in OBS and set timers. I really like this small piece of hardware since it's very customizable.
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2020/04/08/tweet_stream_deck.png" alt="Twitter Stream Deck Tweet">
+![Twitter Stream Deck Tweet](/articles/2020/39.4.tweet_stream_deck.png)
 
 The Stream Deck can be used OOTB when OBS is running locally but I'd also want to use this device in OBS running in the VM. However local USB devices are not connected by default when a remote desktop session is used. Lucky we can use a technique called [RemoteFX USB redirection](https://techcommunity.microsoft.com/t5/enterprise-mobility-security/introducing-microsoft-remotefx-usb-redirection-part-1/ba-p/247035) which is enabled by changing two group policies, one for the local machine (client) and one for the remote VM (host).
 
@@ -64,7 +68,7 @@ The Stream Deck can be used OOTB when OBS is running locally but I'd also want t
 - Set _Allow RDP redirection of other supported RemoteFX USB devices from this computer_ to `Enabled`.
 - Select `Administrators & Users` for the _RemoteFX USB Redirection Access Rights_ options.
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2020/04/08/rdp_client.png" alt="Group policy settings for enabling RemoteFX on the local client side.">
+![Group policy settings for enabling RemoteFX on the local client side.](/articles/2020/39.5.rdp_client.png)
 
 In a command prompt run: `gpupdate /force` to enfore the updated policy (a restart might be required as well).
 
@@ -73,7 +77,7 @@ In a command prompt run: `gpupdate /force` to enfore the updated policy (a resta
 - Open the _Local Group Policy Editor_ and navigate to _Administrative Templates_ > _Windows Components_ > _Remote Desktop Services_ > _Remote Desktop Session Host_ > _Device and Resource Redirection_
 - Set the _Do not allow suported Plug and Play device redirection_ to `Disabled`. 
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2020/04/08/rdp_host.png" alt="Group policy settings for enabling USB devices on the remote host side.">
+![Group policy settings for enabling USB devices on the remote host side.](/articles/2020/39.6.rdp_host.png)
 
 In a command prompt run: `gpupdate /force` to enfore the updated policy (a restart might be required as well).
 
@@ -83,11 +87,12 @@ In a command prompt run: `gpupdate /force` to enfore the updated policy (a resta
 
 Now a remote desktop connection can be started from the local machine, and the USB connections can be selected, which are redirected to the VM.
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2020/04/08/rdp_settings.png" alt="Edit the RDP session settings to allow USB connectivity.">
+![Edit the RDP session settings to allow USB connectivity.](/articles/2020/39.7.rdp_settings.png)
 
 Now both hard and software are set up to use the Stream Deck on the remote VM.
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2020/04/08/stream_deck_vm.png" alt="Stream Deck software on the VM.">
+![Stream Deck software on the VM.](/articles/2020/39.8.stream_deck_vm.png)
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2020/04/08/stream_deck_hardware.jpeg" alt="Stream Deck hardware.">
+![Stream Deck hardware.](/articles/2020/39.9.stream_deck_hardware.jpeg)
+
 In the next part I'll show more details about the OBS setup we're using for ServerlessDays Amsterdam.
