Add serverlessdays postmortem post

--- a/content/articles/40.serverlessdays-amsterdam-post-mortem.md
+++ b/content/articles/40.serverlessdays-amsterdam-post-mortem.md
@@ -1,20 +1,24 @@
 ---
-layout: post
+cover: /articles/2020/40.00-desk.jpg
+author:
+  name: Marc Duiker
+  avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
+  link: https://twitter.com/marcduiker
+date: 2020-05-12
 title: "ServerlessDays Amsterdam, a personal post-mortem"
-tags: azure live-streaming serverlessdays
+description:
+layout: article
 ---
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2020/05/12/00-desk.jpg" alt="My deskat the start of the conference.">
+![My desk at the start of the conference.](/articles/2020/40.00-desk.jpg)
 
 It is now May 12th, four days after the ServerlessDays Amsterdam 2020 virtual conference. The conference was incredibly fun and slightly terrifying at the same time.
 
 I had two roles during the conference; in the morning, I would do the hosting with Lian Li (who really has a talent for MC-ing), and during the entire day, I would be responsible for the technical part. In specific that means that I'd be calling in speakers & panelists into the Skype group call, and controlling the streaming software (OBS), switching scenes, configuring webcam sources, shared screens, names, and starting the prerecorded sessions.
 
-<!--more-->
-
 I gained some practice with live streaming over the last month since we did two virtual ServerlessDays Meetups. Still, I knew the conference would be a next-level challenge, and it sure was 😅. So I spent most of my free time over the last three weeks on perfecting my streaming setup and preparing a detailed script that I could use during the conference.
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2020/05/12/01-script.jpg" alt="First few lines of the script for the conference.">
+![First few lines of the script for the conference.](/articles/2020/40.01-script.jpg)
 
 *First few lines of the script for the conference.*
 
@@ -26,13 +30,13 @@ I want to highlight some of the work I did before the conference day because thi
 
 Since half of the speakers provided us with a prerecorded session (thank you!), I put those recordings in a VLC Media Source playlist in OBS with 5-second bumpers in between. When a new recorded session would start, I  only needed to remove the first recording from the playlist, and I was good to go.
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2020/05/12/02-vlc-media-source.jpg" alt="The VLC Media source in OBS with all the prerecorded videos.">
+![The VLC Media source in OBS with all the prerecorded videos.](/articles/2020/40.02-vlc-media-source.jpg)
 
 *The VLC Media source in OBS with all the prerecorded videos.*
 
 An annoying thing about the VLC Media Source (and the regular Media Source) is that you don't see the remaining playtime of the video. Having these times is essential if you want to give a heads up to the hosts, and speaker. To fix this, I added timers for each prerecorded session to my StreamDeck. So when I switched to the OBS scene with the VLC Media Source, I would also press the corresponding timer on the StreamDeck, which started a countdown.
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2020/05/12/03-streamdeck-timers.jpg" alt="Using timers for each recorded session.">
+![Using timers for each recorded session.](/articles/2020/40.03-streamdeck-timers.jpg)
 
 *Using timers for each recorded session.*
 
@@ -40,7 +44,7 @@ An annoying thing about the VLC Media Source (and the regular Media Source) is t
 
 Something I didn't want to spend much time on during the day itself would be configuring the speaker's names in OBS. I was looking into the read from file option, and then I noticed the Chatlog Mode. With this option enabled, with a row count of 1, only the last line is used as the input for a text field. So I put all the speaker names in a text file in reverse order and used that as the source for the speaker name field in OBS. When a new speaker was joining, I only needed to remove the last line and save the file.
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2020/05/12/04-chatlogmode.jpg" alt="Using text files with chatlog mode enabled.">
+![Using text files with chatlog mode enabled.](/articles/2020/40.04-chatlogmode.jpg)
 
 *Using text files with chatlog mode enabled.*
 
@@ -50,7 +54,7 @@ Something I didn't want to spend much time on during the day itself would be con
 
 My day started at a reasonable time. I woke up at 7:00, took a shower, had some breakfast, and made *a lot of coffee* ☕. I also prepared some lunch, snacks, and fruits to take with me upstairs since I would spend my entire day in my home office in the attic. I did allow myself some bathroom breaks though.
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2020/05/12/05-food.jpg" alt="Refreshments for during the day.">
+![Refreshments for during the day.](/articles/2020/40.05-food.jpg)
 
 *Refreshments for during the day.*
 
@@ -58,16 +62,15 @@ My day started at a reasonable time. I woke up at 7:00, took a shower, had some 
 
 Once settled behind my laptop, I RDP-ed to the virtual machine in Azure, which is the heart of the streaming setup. It's an NV6 machine, GPU enabled, and with enough CPU and memory to use for streaming.
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2020/05/12/06-obs.jpg" alt="The OBS setup running in an Azure VM.">
+![The OBS setup running in an Azure VM.](/articles/2020/40.06-obs.jpg)
 
 *The OBS setup running in an Azure VM.*
 
 Since we're using a combination of Skype, NDI Tools, and OBS, I started a Skype group call on the VM and invited myself, so I call in from my laptop. 
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2020/05/12/07-skype-group.jpg" alt="The Skype group call">
+![The Skype group call](/articles/2020/40.07-skype-group.jpg)
 
 *The Skype group call.*
-
 
 I verified the webcam source in OBS since I was also doing a hosting role in the morning. I once more checked the order of the speaker names in the text file, and the prerecorded sessions in the playlist. I also checked the scene transitions using my StreamDeck since I updated the software earlier this week (risky, I know). 
 
@@ -95,7 +98,7 @@ Thanks to the Twitterverse I now know the source of the issue and the solution! 
 
 Ant started his keynote session, and I switched to the scene with his shared screen and his webcam feed. It became apparent quickly that there was not a single good spot for this small webcam inside the shared screen feed since Ant's slides were ever-changing. I moved his webcam feed around during this presentation, which must have looked hilarious to the audience 😂.
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2020/05/12/08-ant.jpg" alt="Ant being moved from right to left during his presentation.">
+![Ant being moved from right to left during his presentation.](/articles/2020/40.08-ant.jpg)
 
 *Ant being moved from right to left during his live presentation.*
 
@@ -121,7 +124,7 @@ Time for the lunch break! Even though I had prepared my lunch up-front and took 
 
 When the break was almost over, I counted down out loud again, so Floor and Marek would know the exact moment of go live. I LOL'd about the introduction Floor gave when she mentioned that Marek would explain why they are 'arch enemies' 🤣. Floor works at Microsoft and Marek at AWS. I love the fact that they could host together, it shows we have a fun and respectful community 🧡.
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2020/05/12/08-floorandmarek.jpg" alt="Hilarious intro by Floor and Marek.">
+![Hilarious intro by Floor and Marek.](/articles/2020/40.08-floorandmarek.jpg)
 
 *Hilarious intro by Floor and Marek.*
 
@@ -134,7 +137,7 @@ The next three sessions from Sven Al Hamad, Josh Carlise, and Farrah Campbell we
 
 At the start of Josh his session, I was a bit too slow with updating the speaker name source in OBS. Also, Josh's audio was not working initially, but it was all fixed quickly. His session ended pretty hilariously thanks to a question from Floor; "What is behind door number 3?". It was a bathroom, and Josh said he didn't want to open the door in case someone would be in there 🤣.
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2020/05/12/09-doorno3.jpg" alt="Josh pointing to door no 3.">
+![Josh pointing to door no 3.](/articles/2020/40.09-doorno3.jpg)
 
 *Josh pointing to door no 3.*
 
@@ -162,7 +165,7 @@ During the final keynote session, I created a new scene in OBS with the webcam f
 
 After Simona's keynote, I switched to the new scene, and again two of the four webcam sources had resizing issues. I pretty much gave up by now to correct it. 😫
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2020/05/12/10-4hosts.jpg" alt="Unexpected resizing of webcam feeds again">
+![Unexpected resizing of webcam feeds again](/articles/2020/40.10-4hosts.jpg)
 
 *Unexpected resizing of webcam feeds again.*
 
@@ -174,7 +177,7 @@ When it was time to raffle the prizes, the Google Sheets script for selecting th
 
 Lian continued the closing of the conference and thanked sponsors, speakers, and organizers. At the exact moment, Lian was thanking me, my Skype connection froze, and eventually, my call dropped again! I was really was annoyed since this was the second time it happened during the day. I had to replay the YouTube recording to hear Lian's compliments, so thank you, Lian, for your kind words. I was lucky my frozen image was looking ok and I'm not making a weird face 😅.
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2020/05/12/11-frozen.jpg" alt="My frozen but happy image during the close out of the conference.">
+![My frozen but happy image during the close out of the conference.](/articles/2020/40.11-frozen.jpg)
 
 *My frozen but happy image during the close out of the conference.* 
 
@@ -194,7 +197,7 @@ As soon as I dropped off the group call, I stopped streaming the conference even
 
 Once both Twitch and YouTube streams were up and running, which was 10 minutes later than planned, I could finally relax, grab a beer, and enjoy Sam's performance.
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2020/05/12/12-afterparty.jpg" alt="Me enjoying the afterparty!">
+![Me enjoying the afterparty!](/articles/2020/40.12-afterparty.jpg)
 
 *Me enjoying the afterparty!*
 
@@ -211,7 +214,7 @@ Once the after-party was over, I watched some Netflix, and then went to bed. I c
 
 When I looked at the Restream statistics the day after, there were, on average, 82 people watching simultaneously. This is a bit lower than I expected since we received 380 registrations for the event. A lot of people must have thought the recording would appear online anyway. Or perhaps they had an online conference overload. Honestly, I can understand that. This was a free conference in the end, so some virtual no-show was expected.
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2020/05/12/13-restream.jpg" alt="Restream statistics showing the view count throughout the day.">
+![Restream statistics showing the view count throughout the day.](/articles/2020/40.13-restream.jpg)
 
 *Restream statistics showing the view count throughout the day.*
 
@@ -229,15 +232,8 @@ If you've read until this point, you're either really interested in this or slig
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/cqaewpYtYTA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
-So, would I ever 
-do this again? Yes and no. I would do this again since I enjoy working with the kind people in this awesome community. I also like to play around with the technology and learn new things. I would not do it in the exact same way, though. I'd prepare more, investigate in different tools, and, most importantly, share the responsibility for running the technical setup. Because now, I was solely responsible for doing tech work, which was quite a risk. If I had fallen down the stairs and had broken my leg, nobody could have stepped in quickly and continued the streaming. So my most important lesson learned is to involve others early on and to help them get familiar with the technical setup. This way, we can share the responsibility and I can sleep better in the nights leading to the event 😉.
+So, would I ever do this again? Yes and no. I would do this again since I enjoy working with the kind people in this awesome community. I also like to play around with the technology and learn new things. I would not do it in the exact same way, though. I'd prepare more, investigate in different tools, and, most importantly, share the responsibility for running the technical setup. Because now, I was solely responsible for doing tech work, which was quite a risk. If I had fallen down the stairs and had broken my leg, nobody could have stepped in quickly and continued the streaming. So my most important lesson learned is to involve others early on and to help them get familiar with the technical setup. This way, we can share the responsibility and I can sleep better in the nights leading to the event 😉.
 
 I hope to see you all at the conference next year, or at one of our [(virtual) Meetups](https://www.meetup.com/ServerlessDays-Amsterdam/)!
 
 *Marc*
-
-
-
-
-
-
