--- a/content/articles/41.msbuild-serverless-community-creativity.md
+++ b/content/articles/41.msbuild-serverless-community-creativity.md
@@ -1,20 +1,24 @@
 ---
-layout: post
+cover: /articles/2020/41.1.Build_Wallpaper_DarkTheme_DesignA_8bit.jpg
+author:
+  name: Marc Duiker
+  avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
+  link: https://twitter.com/marcduiker
+date: 2020-05-22
 title: "My MSBuild 2020 experience: serverless, community & creativity"
-tags: microsoft msbuild community
+description:
+layout: article
 ---
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2020/05/22/Build_Wallpaper_DarkTheme_DesignA_8bit.jpg" alt="8-bit MSBuild wallpaper">
+![8-bit MSBuild wallpaper](/articles/2020/41.1.Build_Wallpaper_DarkTheme_DesignA_8bit.jpg)
 
 Microsoft just finished its 48-hour live online event, [MSBuild 2020](https://mybuild.microsoft.com/), and I enjoyed it immensely! I was fortunate to be invited for two sessions: a panel discussion on *building serverless APIs*, and a *connect with the community* session. I also threw in some pixel art just for fun, more on that later.
-
-<!--more-->
 
 ## Build and Secure Serverless APIs panel discussion
 
 My first appearance was during a serverless panel discussion (Session BDL146) together with Rajorshi Ghosh Choudhury (Hasura) and Guy Prodjarny (Snyk). The session was hosted by ☁ 🥑 Simona Cotin. We talked about our definition of serverless, state management, GraphQL, security aspects, and common pitfalls. We covered a lot in just 30 minutes!
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2020/05/22/serverless_panel.jpg" alt="Build and Secure Serverless APIs panel">
+![Build and Secure Serverless APIs panel](/articles/2020/41.2.serverless_panel.jpg)
 
 *Build and Secure Serverless APIs panel*
 
@@ -24,7 +28,7 @@ You can view the [recording here](https://mybuild.microsoft.com/sessions/e477304
 
 The second session I was part of, was *Connect with Microsoft Western Europe and your local dev community* (Session COM178). During this session, many community members took part in panel discussions and gave updates on projects they are working on in their own time.
 
-I got the opportunity to talk about the [Azure Functions Update Twitter bot](https://blog.marcduiker.nl/2019/03/03/creating-azure-functions-updates-twitterbot.html) that I made with Azure Functions & Durable Functions. I explained the reason why I built it, shared plans for future updates, and mentioned that I'll be helping out Suzanne Daniels (Microsoft Dev PMM) with [meetupgemist.nl](https://meetupgemist.nl/).
+I got the opportunity to talk about the [Azure Functions Update Twitter bot](https://marcduiker.dev/articles/creating-azure-functions-updates-twitterbot) that I made with Azure Functions & Durable Functions. I explained the reason why I built it, shared plans for future updates, and mentioned that I'll be helping out Suzanne Daniels (Microsoft Dev PMM) with [meetupgemist.nl](https://meetupgemist.nl/).
 
 The recording is not available yet, but here is [the session page](https://mybuild.microsoft.com/sessions/0063cc6a-b3f9-439f-b67a-ccf3dbe11b59).
 
@@ -49,16 +53,15 @@ During the next day, I thought it would be nice to show my appreciation to the h
 
 I received lovely responses from everyone 😊. The Microsoft Developer Twitter account did a shout-out with an illustrated & 8-bit version of myself 😂.
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2020/05/22/illustrated_marc.jpg" alt="Hilarious shout-out from the Microsoft Developer Twitter account">
+![Hilarious shout-out from the Microsoft Developer Twitter account](/articles/2020/41.3.illustrated_marc.jpg)
 
 *Hilarious shout-out from the Microsoft Developer Twitter account.*
 
 During the final minutes of Build, I even got a shout-out from Dona, Seth, and Christina for this. This really made my day! 🎉😃
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2020/05/22/twitter_thankyou_message.jpg" alt="My thank you tweet with the 8-bit collage.">
+![My thank you tweet with the 8-bit collage.](/articles/2020/41.4.twitter_thankyou_message.jpg)
 
 *My thank you tweet with the 8-bit collage.*
-
 
 I receive quite some requests for 8-bit portraits now 😅. I hope you understand I can't do all of them. I make them by hand, pixel by pixel (using a tool called Aseprite). It takes quite some time to create a recognizable pixel portrait for someone. If you want to support my creative work, please buy me a coffee: [ko-fi.com/marcduiker](https://ko-fi.com/marcduiker) and let's get in touch 😊.
 
@@ -66,7 +69,7 @@ I receive quite some requests for 8-bit portraits now 😅. I hope you understan
 
 I really enjoyed one of the last sessions of the third day titled *Inspiring Next Gen Coders with Make Code* ([session INT157C](https://mybuild.microsoft.com/sessions/a1638103-16a8-4059-90ac-54c7e0dda8a2?source=sessions)). Scott Hanselman and Louanne Murphy demonstrated *Make Code*, an open educational programming platform backed by various organizations. It allows you to create games or do IoT projects with hardware components from micro:bit and Adafruit, for instance. Programming is done in the browser with visual blocks or in Javascript. Since I was really eager to try *Make Code*, I decided to create a small retro style game using [arcade.makecode.com](https://arcade.makecode.com).
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2020/05/22/cheez-it_deth_match_game.jpg" alt="The Cheez-It Deth Match game">
+![The Cheez-It Deth Match game](/articles/2020/41.5.cheez-it_deth_match_game.jpg)
 
 *The Cheez-It Deth Match game*
 
