Add safe orchestrations post

--- a/content/articles/42.writing-safe-orchestrations.md
+++ b/content/articles/42.writing-safe-orchestrations.md
@@ -1,17 +1,20 @@
 ---
-layout: post
+cover: /articles/2020/42.safe-orchestrations-cover.png
+author:
+  name: Marc Duiker
+  avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
+  link: https://twitter.com/marcduiker
+date: 2020-09-16
 title: "Durable Functions API - Writing Safe Orchestrations"
-tags: azure durable functions serverless faas stateful orchestration
+description:
+layout: article
 ---
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2020/09/16/safe-orchestrations-cover.png" alt="Slide showing Writing Safe Orchestrations">
-
+![Slide showing Writing Safe Orchestrations](/articles/2020/42.safe-orchestrations-cover.png)
 
 This article is part of [#ServerlessSeptember](https://aka.ms/ServerlessSeptember2020). You'll find other helpful articles, detailed tutorials, and videos in this all-things-Serverless content collection. New articles from community members and cloud advocates are published every week from Monday to Thursday through September.
 
 Find out more about how Microsoft Azure enables your Serverless functions at [https://docs.microsoft.com/azure/azure-functions/](https://docs.microsoft.com/azure/azure-functions/?WT.mc_id=servsept20-devto-cxaall).
-
-<!--more-->
 
 ## Writing Safe Orchestrations
 
@@ -25,7 +28,6 @@ Here's the video, please give it a thumbs up if you like it and please subscribe
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/ZtIQgR25_Y0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
-
 ### Resources
 
 - GitHub repo with demo solution containing the code violations & workarounds: [github.com/marcduiker/demos-durable-task-analyzer](https://github.com/marcduiker/demos-durable-task-analyzer).
@@ -33,7 +35,7 @@ Here's the video, please give it a thumbs up if you like it and please subscribe
 
 ### Links to other posts in this series
 
-- [Starting Orchestrations (DurableOrchestrationClient Part 1)](/2019/01/07/durable-functions-api-durableorchestrationclient-1.html)
-- [Retrieving the Orchestration Status (DurableOrchestrationClient Part 2)](/2019/02/17/durable-functions-api-durableorchestrationclient-2.html)
-- [Purge & Terminate Orchestrations (DurableOrchestrationClient Part 3)](/2019/08/12/durable-functions-api-purge-terminate.html)
-- [Human Interaction Pattern (DurableOrchestrationClient Part 4)](/2020/03/15/durable-functions-api-durableorchestrationclient-4.html)
+- [Starting Orchestrations (DurableOrchestrationClient Part 1)](/articles/durable-functions-api-durableorchestrationclient-1)
+- [Retrieving the Orchestration Status (DurableOrchestrationClient Part 2)](/articles/durable-functions-api-durableorchestrationclient-2)
+- [Purge & Terminate Orchestrations (DurableOrchestrationClient Part 3)](/articles/durable-functions-api-purge-terminate)
+- [Human Interaction Pattern (DurableOrchestrationClient Part 4)](/articles/durable-functions-api-durableorchestrationclient-4)
