Add AzFuncUni HTTP lesson

--- a/content/articles/43.azfuncuni-http-lesson-dotnet.md
+++ b/content/articles/43.azfuncuni-http-lesson-dotnet.md
@@ -1,15 +1,18 @@
 ---
-layout: post
-title: Azure Functions University - HTTP Lesson (.NET Core)
-tags: serverless azure functions
+cover: /articles/2020/43.AzureFunctionsUniversity_HTTP_Lesson_dotnetcore.png
+author:
+  name: Marc Duiker
+  avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
+  link: https://twitter.com/marcduiker
+date: 2020-10-28
+title: "Azure Functions University - HTTP Lesson (.NET Core)"
+description:
+layout: article
 ---
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2020/10/28/AzureFunctionsUniversity_HTTP_Lesson_dotnetcore.png" alt="Http Lesson .NET Core">
+![Http Lesson .NET Core](/articles/2020/43.AzureFunctionsUniversity_HTTP_Lesson_dotnetcore.png)
 
 Hi serverless friends, we have a new Azure Functions University lesson for you! In this lesson we will learn how to use the HTTP trigger in Azure Functions written in .NET Core 3.1.
-
-<!--more-->
-
 ## Lesson
 
 You can find the lesson on GitHub: [HTTP Trigger (.NET Core)](https://github.com/marcduiker/azure-functions-university/blob/main/lessons/dotnetcore31/http/README.md).
@@ -18,7 +21,6 @@ And you can watch the video on YouTube:
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/5k35dlBAXxA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-<br>
 The lesson consists of the following exercises:
 
 |Nr|Exercise
