--- a/content/articles/44.azfuncuni-blob-lesson-dotnet.md
+++ b/content/articles/44.azfuncuni-blob-lesson-dotnet.md
@@ -1,14 +1,18 @@
 ---
-layout: post
-title: Azure Functions University - Blob Lesson (.NET Core)
-tags: serverless azure functions
+cover: /articles/2020/44.AzureFunctionsUniversity_Blob_Lesson_dotnetcore.png
+author:
+  name: Marc Duiker
+  avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
+  link: https://twitter.com/marcduiker
+date: 2020-11-11
+title: "Azure Functions University - Blob Lesson (.NET Core)"
+description:
+layout: article
 ---
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2020/11/11/AzureFunctionsUniversity_Blob_Lesson_dotnetcore.png" alt="Blob Lesson .NET Core">
+![Blob Lesson .NET Core](/articles/2020/44.AzureFunctionsUniversity_Blob_Lesson_dotnetcore.png)
 
 Hi serverless friends, we have a new Azure Functions University lesson for you! In this lesson we will learn how to use the Blob trigger and bindings in Azure Functions written in .NET Core 3.1.
-
-<!--more-->
 
 ## Lesson
 
@@ -18,7 +22,6 @@ And you can watch the video on YouTube:
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/z5AQdk-43ZI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-<br>
 The lesson consists of the following exercises:
 
 |Nr|Exercise
