--- a/content/articles/45.creative-coding.md
+++ b/content/articles/45.creative-coding.md
@@ -1,7 +1,13 @@
 ---
-layout: post
+cover: /articles/2020/45.1.Fractal_weeds.jpg
+author:
+  name: Marc Duiker
+  avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
+  link: https://twitter.com/marcduiker
+date: 2020-11-23
 title: "How I Got Started With Creative Coding"
-tags: 'creative coding'
+description:
+layout: article
 ---
 
 This article is part of [Festive Tech Calendar 2020](https://festivetechcalendar.com/). An online event organized by the tech community with content created by many kind individuals around the world.
@@ -15,21 +21,19 @@ Here's the Wikipedia definition:
 
 Source: [Wikipedia](https://en.wikipedia.org/wiki/Creative_coding)
 
-<!--more-->
-
 For me, creative coding means creating something enjoyable for myself and, hopefully, also for others. Creative coding can be a myriad of things, allowing you to express yourself in many different ways. I'd like to share my experience with you, and I hope you'll be inspired to try some creative coding yourself!
 
 ## Games & Graphics
 
 My fascination with creative coding started with computer graphics. This started in my early teenage years while playing [Prince of Persia](https://en.wikipedia.org/wiki/Prince_of_Persia_(1989_video_game)). The fascination grew over time when I began to create graphics myself. I created 3D landscapes with Bryce, fractal flames using [Apophisis](https://en.wikipedia.org/wiki/Apophysis_(software)), and other recursive structures using [L-system](https://en.wikipedia.org/wiki/L-system) generators. I'm still intrigued by how well recursive rules can describe nature. Look at these computer-generated fractal weeds 😍:
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2020/11/23/Fractal_weeds.jpg" alt="Fractal Weeds">
+![Fractal Weeds](/articles/2020/45.1.Fractal_weeds.jpg)
 
 ## Photography
 
 For a couple of years, my attention turned to photography and photo editing. I especially enjoyed urban exploration photography, visiting abandoned locations, and capturing the beauty of buildings and interiors in decay. The atmosphere of these locations is breathtaking.
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2020/11/23/salve_mater_urbex.jpg" alt="Indoor shot of a decayed building">
+![Indoor shot of a decayed building](/articles/2020/45.2.salve_mater_urbex.jpg)
 
 *Decayed interioir of a former sanatorium.*
 
@@ -38,7 +42,8 @@ For about two years, I gave photography workshops at the local community college
 ## Visual arts
 
 When I learned to code, during my first job, my interest in creating computer graphics spiked again. I discovered [Processing](https://processing.org/), a software sketchbook. I created many sketches while watching tutorials from Daniel Schiffman ([The Coding Train](https://www.youtube.com/user/shiffman/)). He has a gift for explaining topics on software engineering, maths, and graphics in a very accessible way.
-<a href="https://www.youtube.com/user/shiffman/" target="_blank"><img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2020/11/23/the_coding_train.jpg" alt="The Coding Train on YouTube"></a>
+
+[![The Coding Train on YouTube](/articles/2020/45.3.the_coding_train.jpg)](https://www.youtube.com/user/shiffman/)
 
 I really recommend [The Nature of Code playlist]( https://www.youtube.com/playlist?list=PLRqwX-V7Uu6aFlwukCmDf0-1-uSR7mklK), which features 83 videos ranging from Perlin noise, my favorite type of noise, to fractals and genetic algorithms.
 
@@ -50,7 +55,7 @@ I really recommend [The Nature of Code playlist]( https://www.youtube.com/playli
 
 I excel in starting new projects and never finishing them 😅. Sometimes I don't even start them at all 😬. About one and a half years ago, I read about retro game development using [PICO-8](https://www.lexaloffle.com/pico-8.php). I bought the software with the intent to create some cool games, but I didn't touch the software for a couple of months. Then, I read about PICO-8 again, this time in a [MagPi magazine](https://magpi.raspberrypi.org/articles/build-retro-game-pico-8-raspberry-pi). At about the same time, Scott Hanselman invited Joseph White, the creator of PICO-8, on one of his [podcasts](https://hanselminutes.com/703/tiny-games-with-the-pico-8-fantasy-console-and-joseph-white). This clearly was a sign I had to pick up PICO-8 and create a game with it. Since I am a big fan of Azure Functions, I created a game in which you play the Azure Functions logo and need to collect items to restore the power of an Azure data center.
 
-<a href="https://marcduiker.itch.io/azure-functions-the-game" target="_blank"><img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2020/11/23/azure_functions_the_game.gif" alt="Animated gif of Azure Functions, The Game"></a>
+[![Animated gif of Azure Functions, The Game](/articles/2020/45.4.azure_functions_the_game.gif)](https://marcduiker.itch.io/azure-functions-the-game)
 
 *Azure Functions, The Game*
 
@@ -58,7 +63,7 @@ Creating this puzzle game took some effort, I spent many evenings and nights ove
 
 My next game, YuckyYAML, is still in progress. It is a puzzle game, inspired by Sokoban, and is themed around Docker & Kubernetes, so it features whales and containers.
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2020/11/23/yucky_yaml_3.gif" alt="Animated gif of the Yucky YAML game (work in progress).">
+![Animated gif of the Yucky YAML game (work in progress).](/articles/2020/45.5.yucky_yaml_3.gif)
 
 *Yucky YAML game (work in progress).*
 
@@ -76,7 +81,7 @@ I was very fortunate to be part of MS Build this year. First, I took part in a p
 
  After my talks, I wanted to show appreciation to the hosts since I know it's a lot of effort to keep an event rolling smoothly. So I started creating 8-bit pixel portraits for the hosts. I used a 16x16 pixel format, which is really limited, so it was a challenge drawing everyone in a way they were still recognizable. I posted them on Twitter, and the responses I got were so kind. I kept making the portraits until I had one for each of the hosts. At the end of Build, the hosts gave me a shout-out for my work, which made me very proud. It was a wonderful experience to contribute to Build in this way 😊.
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2020/11/23/Build_hosts_900.jpg" alt="Build 2020 hosts, as 8bit avatars.">
+![Build 2020 hosts, as 8bit avatars.](/articles/2020/45.6.Build_hosts_900.jpg)
 
 *Build 2020 hosts, as 8bit avatars.*
 
@@ -84,7 +89,7 @@ I was very fortunate to be part of MS Build this year. First, I took part in a p
 
 One of the last sessions of MS Build was about MakeCode, an educational programming platform backed by various organizations. During [this session](https://mybuild.microsoft.com/sessions/a1638103-16a8-4059-90ac-54c7e0dda8a2?source=sessions), Louanne Murphy and Scott Hanselman showed how versatile and accessible the platform is. One of the areas where you can use MakeCode is creating [arcade games](https://arcade.makecode.com/), so obviously, I had to try that. In about 1.5 hours, I completed this mini-game featuring Dona and Seth, competing to eat as many Cheeze-Its within 30 seconds.The game is far from perfect, but the process of making this was a lot of fun!
 
-<a href="https://arcade.makecode.com/30800-46845-98441-86480" target="_blank"><img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2020/11/23/Cheeze-it_Deth_Match.jpg" alt="Screenshot of Cheeze-It Deth Match, a minigame made with MakeCode."></a>
+[![Screenshot of Cheeze-It Deth Match, a minigame made with MakeCode.](/articles/2020/45.7.Cheeze-it_Deth_Match.jpg)](https://arcade.makecode.com/30800-46845-98441-86480)
 
 *[Cheeze-It Deth Match](https://arcade.makecode.com/30800-46845-98441-86480) on MakeCode.*
 
@@ -93,7 +98,7 @@ One of the last sessions of MS Build was about MakeCode, an educational programm
 I was really starting to like the 8-bit avatars, so I kept on making some for close (Twitter) friends. Others began to notice the avatars, and the demand kept increasing. Since I'm saving for a Surface Go 2, I decided to ask for a small donation when people ask me to create their avatar. So far, I've created 120 of these avatars, and I'm still receiving commissions.
 Since the avatars I created for Build, I've doubled the resolution, I'm now using 32x32 pixels, which is still very limited but allows a bit more detail in hair and clothes. I'm using a limited 32 color palette, which ensures all portraits have the same look & feel.
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2020/11/23/avatars_collage_107frames.gif" alt="Animation of various avatars I've made.">
+![Animation of various avatars I've made.](/articles/2020/45.8.avatars_collage_107frames.gif)
 
 ## What's next
 
