Add 6 2021 blog posts

--- a/content/articles/53.azure-functions-university.md
+++ b/content/articles/53.azure-functions-university.md
@@ -1,19 +1,22 @@
 ---
-layout: post
-title: Creating Azure Functions University, an open source educational project
-tags: azure functions serverless open-source education
+cover: /articles/2021/53.1.AzureFunctionsUniversity_YouTube_Lesson1.png
+author:
+  name: Marc Duiker
+  avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
+  link: https://twitter.com/marcduiker
+date: 2021-04-27
+title: "Creating Azure Functions University, an open source educational project"
+description:
+layout: article
 ---
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2021/04/27/AzureFunctionsUniversity_YouTube_Lesson1.png" alt="Screenshot of the first Azure Functions University lesson">
+![Screenshot of the first Azure Functions University lesson](/articles/2021/53.1.AzureFunctionsUniversity_YouTube_Lesson1.png)
 
 ## Azure Functions University
 
 Azure Functions University is an educational project to learn about Azure Functions, the Functions as a Service offering in Azure. The content is aimed at people who do not have any previous experience with serverless technology and want to learn more about it.
 
-<!--more-->
-
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2021/04/27/AzureFunctionsUniversity_GitHub_Readme.png" alt="Screenshot of the Azure Functions University GitHub repository">
-
+![Screenshot of the Azure Functions University GitHub repository](/articles/2021/53.2.AzureFunctionsUniversity_GitHub_Readme.png)
 
 ## The idea behind the project
 
@@ -42,8 +45,7 @@ At this moment, the curriculum contains the following lessons:
 * **CosmosDB**; How to use the output and input bindings to read/write data from/to CosmosDB, using the CosmosDBTrigger to start a function when a new document is added to a collection, and using KeyVault to store the CosmosDB connection string.
 * **Durable Functions, part I**; Why using Durable Functions is beneficial when dealing with multiple functions. This is demonstrated by using the function chaining pattern to illustrate how orchestrations work.
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2021/04/27/AzureFunctionsUniversity_YouTube_Playlist.png" alt="Screenshot of the Azure Functions University playlist on YouTube">
-
+![Screenshot of the Azure Functions University playlist on YouTube](/articles/2021/53.3.AzureFunctionsUniversity_YouTube_Playlist.png)
 
 I believe that consistency is key when creating educational content. Therefore each lesson follows the same structure:
 
