--- a/content/articles/49.azfuncuni-cosmosdb-lesson-dotnet.md
+++ b/content/articles/49.azfuncuni-cosmosdb-lesson-dotnet.md
@@ -1,14 +1,18 @@
 ---
-layout: post
-title: Azure Functions University - CosmosDB Lesson (.NET Core)
-tags: serverless azure functions
+cover: /articles/2021/49.AzureFunctionsUniversity_CosmosDB_Lesson_dotnetcore.png
+author:
+  name: Marc Duiker
+  avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
+  link: https://twitter.com/marcduiker
+date: 2021-02-07
+title: "Azure Functions University - CosmosDB Lesson (.NET Core)"
+description:
+layout: article
 ---
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2021/02/07/AzureFunctionsUniversity_CosmosDB_Lesson_dotnetcore.png" alt="CosmosDB Lesson .NET Core">
+![CosmosDB Lesson .NET Core](/articles/2021/49.AzureFunctionsUniversity_CosmosDB_Lesson_dotnetcore.png)
 
 Hi serverless friends, we have a new Azure Functions University lesson for you! In this lesson we will learn how to use the CosmosDB trigger & bindings in Azure Functions written in .NET Core 3.1.
-
-<!--more-->
 
 ## Lesson
 
