--- a/content/articles/50.azfuncuni-durablefunctions-lesson-typescript.md
+++ b/content/articles/50.azfuncuni-durablefunctions-lesson-typescript.md
@@ -1,14 +1,18 @@
 ---
-layout: post
-title: Azure Functions University - Durable Functions Introduction & Chaining (TypeScript)
-tags: serverless azure functions
+cover: /articles/2021/50.AzureFunctionsUniversity_DurableFunctions_Lesson1_typescript.png
+author:
+  name: Marc Duiker
+  avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
+  link: https://twitter.com/marcduiker
+date: 2021-02-14
+title: "Azure Functions University - Durable Functions Introduction & Chaining (TypeScript)"
+description:
+layout: article
 ---
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2022/02/25/AzureFunctionsUniversity_DurableFunctions_Lesson2_typescript.png" alt="Durable Functions Lesson 1 TypeScript">
+![Durable Functions Lesson 1 TypeScript](/articles/2021/50.AzureFunctionsUniversity_DurableFunctions_Lesson1_typescript.png)
 
 Hi serverless friends, we have a new Azure Functions University lesson for you! In this lesson we will learn how to use Durable Functions in Azure Functions written in TypeScript.
-
-<!--more-->
 
 ## Lesson
 
