--- a/content/articles/51.azfuncuni-configuration-lesson-dotnet.md
+++ b/content/articles/51.azfuncuni-configuration-lesson-dotnet.md
@@ -1,14 +1,18 @@
 ---
-layout: post
-title: Azure Functions University - Configuration Lesson (.NET Core)
-tags: serverless azure functions
+cover: /articles/2021/51.AzureFunctionsUniversity_Configuration_Lesson_dotnetcore.png
+author:
+  name: Marc Duiker
+  avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
+  link: https://twitter.com/marcduiker
+date: 2021-03-28
+title: "Azure Functions University - Configuration Lesson (.NET Core)"
+description:
+layout: article
 ---
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2021/03/28/AzureFunctionsUniversity_Configuration_Lesson_dotnetcore.png" alt="Table Lesson .NET Core">
+![Configuration Lesson .NET Core](/articles/2021/51.AzureFunctionsUniversity_Configuration_Lesson_dotnetcore.png)
 
 Hi serverless friends, we have a new Azure Functions University lesson for you! In this lesson we will learn how to use Configuration & Settings in Azure Functions written in .NET Core 3.1.
-
-<!--more-->
 
 ## Lesson
 
