--- a/content/articles/52.azfuncuni-http-lesson-typescript.md
+++ b/content/articles/52.azfuncuni-http-lesson-typescript.md
@@ -1,14 +1,18 @@
 ---
-layout: post
-title: Azure Functions University - HTTP Lesson (TypeScript)
-tags: serverless azure functions
+cover: /articles/2021/52.AzureFunctionsUniversity_HTTP_Lesson_typescript.png
+author:
+  name: Marc Duiker
+  avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
+  link: https://twitter.com/marcduiker
+date: 2021-04-15
+title: "Azure Functions University - HTTP Lesson (TypeScript)"
+description:
+layout: article
 ---
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2021/04/15/AzureFunctionsUniversity_HTTP_Lesson_typescript.png" alt="Http Lesson TypeScript">
+![Http Lesson TypeScript](/articles/2021/52.AzureFunctionsUniversity_HTTP_Lesson_typescript.png)
 
 Hi serverless friends, we have a new Azure Functions University lesson for you! In this lesson we will learn how to use the HTTP trigger in Azure Functions written in TypeScript.
-
-<!--more-->
 
 ## Lesson
 
